# identifi-core

./: .gitignore  Cargo.toml  README.md  package.json  proving_key.hex  test_full_cycle.ts  test_merkle.ts  verifying_key.hex
src/: lib.rs
